# SandSubmission

./: .env.example  .gitignore  AGENTS.md  docker-compose.yml  packages.txt  pyproject.toml  requirements.txt
docs/: build_plan.md  design.md  slice1_schema_proposal.md  slice2_data_quality.md  slice3_analytics.md  slice4_dashboard.md  slice5_reports.md  slice6_ai_narratives.md  slice7_scoring_watchlists.md  slice8_nowcasting.md
sql/: schema_slice1_proposal.sql
src/sand_bulletin/: __init__.py  cli.py  config.py
src/sand_bulletin/analytics/: __init__.py  engine.py  metrics.py
src/sand_bulletin/dashboard/: __init__.py  app.py  data.py
src/sand_bulletin/data_quality/: __init__.py  issues.py  resolution.py  rules.py
src/sand_bulletin/db/: __init__.py  load.py  run_load.py
src/sand_bulletin/ingestion/: __init__.py  batches.py  datasets.py  loaders.py  standardize.py
src/sand_bulletin/narrative/: __init__.py  generator.py  models.py  package.py
src/sand_bulletin/nowcasting/: __init__.py  engine.py
src/sand_bulletin/reports/: __init__.py  charts.py  generator.py  html.py  workbook.py
src/sand_bulletin/reports/templates/: bulletin.html.j2
src/sand_healthcare_bulletin.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_analytics.py  test_dashboard_data.py  test_data_quality.py  test_ingestion_standardization.py  test_narrative.py  test_nowcasting.py  test_reports.py
